2006-03-05  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/hurd/fdopendir.c (__fdopendir): Use O_DIRECTORY
	to force directory check.

2006-03-04  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/hurd/i386/tls.h (_hurd_tls_init): Make sure high bits
	of SEL are clear after copying %gs to low bits.
	(_hurd_tls_fork): Likewise.

2006-03-03  Roland McGrath  <roland@redhat.com>

	[BZ #2414]
	* stdlib/tst-setcontext.c (f1): Take arguments of type int.

2006-03-02  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/alpha/sysdep.h (PTR_MANGLE): Use __typeof in cast.

2006-03-02  Daniel Jacobowitz  <dan@codesourcery.com>

	* sysdeps/unix/sysv/linux/configure.in: Remove MIPS cases.  Allow
	libc_cv_slibdir et al. to be overridden.
	* sysdeps/unix/sysv/linux/configure: Regenerated.

2005-12-27  Jakub Jelinek  <jakub@redhat.com>

	* elf/ldconfig.c (search_dir): Skip prelink temporaries.

2006-03-02  H.J. Lu  <hongjiu.lu@intel.com>

	* elf/check-textrel.c: Don't include "config.h".

2006-03-02  Jakub Jelinek  <jakub@redhat.com>

	* io/ftw.c (process_entry): If dir->streamfd != -1,
	use FXSTATAT rather than LXSTAT to find if unstatable
	file is a dead symlink.

	* elf/check-textrel.c: Include config.h.
	(AB(handle_file)): Don't fail if PF_X | PF_W on architectures known
	to have executable writable PLT.
	* sysdeps/powerpc/powerpc32/configure.in (HAVE_PPC_SECURE_PLT): New
	test.
	* config.h.in (HAVE_PPC_SECURE_PLT): Add.

	* malloc/malloc.c (MALLOC_ALIGNMENT): Set to __alignof__ (long double)
	if long double is more aligned than 2 * SIZE_SZ.
	(misaligned_chunk): Define.
	(public_rEALLOc, _int_free, _int_realloc): Use it.

2006-01-05  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #2013]
	* sysdeps/ia64/memccpy.S: Properly handle recovery for
	predicated speculative load.

2006-03-01  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/sparc/sparc64/fpu/libm-test-ulps: Update.

	* sysdeps/unix/sysv/linux/i386/fxstatat.c (__fxstatat64): Use
	libc_hidden_ver rather than libc_hidden_def.
